<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">punkapi</string>
	<string name="error_fetch_beers">Error fetching beers</string>
	<string name="action_retry">Retry</string>

	<string name="menu_sort_by">Sort by…</string>
	<string name="menu_refresh">Refresh</string>

	<string name="menu_home">Home</string>
	<string name="menu_favorites">Favorites</string>

	<string name="sorting_type_abv">ABV</string>
	<string name="sorting_type_ibu">IBU</string>
	<string name="sorting_type_ebc">EBC</string>

	<string name="sort_dialog_title">Sort by</string>

	<string name="beer_details_id">ID</string>
	<string name="beer_details_name">Name</string>
	<string name="beer_details_abv">ABV</string>
	<string name="beer_details_ibu">IBU</string>
	<string name="beer_details_ebc">EBC</string>
	<string name="beer_details_brewers_tips">Brewers tips</string>
	<string name="beer_details_contributed_by">Contributed by</string>

</resources>
